[gd_scene load_steps=11 format=3 uid="uid://cctro4hnntkfx"]

[ext_resource type="Script" path="res://towers/generic_tower.gd" id="1_c1ltl"]
[ext_resource type="PackedScene" uid="uid://c2ql6nfeiwq05" path="res://projectiles/genericProjectile.tscn" id="2_yp2cc"]
[ext_resource type="Texture2D" uid="uid://bs3a21ckhywul" path="res://artAssets/shadow16px.png" id="3_y0eqx"]
[ext_resource type="Texture2D" uid="uid://cco3v0y1jgtdg" path="res://artAssets/uiElements/towerBarUnderlay.png" id="4_jq1dm"]
[ext_resource type="Texture2D" uid="uid://beahkydbwocw0" path="res://artAssets/tower/milkJug-Sheet.png" id="4_tiba0"]
[ext_resource type="Texture2D" uid="uid://k81vrojl8vo0" path="res://artAssets/uiElements/towerBarProgress.png" id="5_skjf4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y83y4"]
radius = 64.0

[sub_resource type="Animation" id="Animation_y0c1t"]
resource_name = "attack"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_t6ovh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_enryn"]
_data = {
"RESET": SubResource("Animation_t6ovh"),
"attack": SubResource("Animation_y0c1t")
}

[node name="Tower" type="Area2D"]
script = ExtResource("1_c1ltl")
damage = 1
cooldown = 0.5
projectileScene = ExtResource("2_yp2cc")

[node name="shadow" type="Sprite2D" parent="."]
texture = ExtResource("3_y0eqx")
offset = Vector2(0, -1)

[node name="tower" type="Sprite2D" parent="."]
texture = ExtResource("4_tiba0")
offset = Vector2(0, -12)
hframes = 8

[node name="targetRange" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_y83y4")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ProjectileSpawnPoint" type="Marker2D" parent="."]
position = Vector2(0, -20)

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = -12.0
offset_top = -40.0
offset_right = 28.0
max_value = 1.0
step = 0.1
texture_under = ExtResource("4_jq1dm")
texture_progress = ExtResource("5_skjf4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_enryn")
}
autoplay = "RESET"

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_body_shape_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
